Final: tini mini change. Fix body overflow on Auth

--- a/Final/web/Auth/style.css
+++ b/Final/web/Auth/style.css
@@ -21,7 +21,7 @@ body {
     box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.2);
     border-radius: 10px;
     backdrop-filter: blur(10px);
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
 }
 
